--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <main>
+    <!--/*@thymesVar id="message" type="java.lang.String"*/-->
+    <h1 th:if="${message != null}" th:text="${message}"></h1>
     <!--/*@thymesVar id="project" type="io.github.mat3.applicationtodo.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
