--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -10,6 +10,17 @@
 <main>
     <!--/*@thymesVar id="message" type="java.lang.String"*/-->
     <h1 th:if="${message != null}" th:text="${message}"></h1>
+    <!--/*@thymesVar id="projects" type="java.util.List<io.github.mat3.applicationtodo.model.Project>"*/-->
+    <dl th:each="project : ${projects}">
+        <dt th:text="${project.description}">...</dt>
+        <dd>
+            <ul>
+                <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|">
+
+                </li>
+            </ul>
+        </dd>
+    </dl>
     <!--/*@thymesVar id="project" type="io.github.mat3.applicationtodo.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
@@ -26,9 +37,9 @@
                     <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
                 </label>
             </fieldset>
-        <div>
-            <button type="submit" name="addStep">+</button>
-        </div>
+            <div>
+                <button type="submit" name="addStep">+</button>
+            </div>
         </fieldset>
         <p>
             <button type="submit">Dodaj</button>
