--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -5,16 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App: Projects</title>
     <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.css">
+    <style>
+        .Bd{
+            border: solid 1px gray;
+        }
+        .Bdc\(red\){
+            border-color: red !important;
+        }
+
+        .C\(red\){
+            color: red;
+        }
+
+        .P\(0\){
+            padding: 0;
+        }
+        .P\(10\){
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 <main>
     <!--/*@thymesVar id="message" type="java.lang.String"*/-->
     <h1 th:if="${message != null}" th:text="${message}"></h1>
     <!--/*@thymesVar id="projects" type="java.util.List<io.github.mat3.applicationtodo.model.Project>"*/-->
-    <dl th:each="project : ${projects}">
+    <dl th:each="project : ${projects}" class="Bd P(10)">
         <dt th:text="${project.description}">...</dt>
         <dd>
-            <ul>
+            <ul class="P(0)">
                 <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|">
 
                 </li>
@@ -23,18 +42,19 @@
     </dl>
     <!--/*@thymesVar id="project" type="io.github.mat3.applicationtodo.model.projection.ProjectWriteModel"*/-->
     <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
+        <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
         <fieldset>
             <legend>Nowy projekt</legend>
             <label>Opis
-                <input type="text" th:field="*{description}"/>
+                <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'"/>
             </label>
             <fieldset th:each="step,stepStat : *{steps}">
                 <legend th:text="|Krok ${stepStat.index + 1}|"></legend>
                 <label>Opis
-                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}"/>
+                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'"/>
                 </label>
                 <label>Dni do końca projektu
-                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"/>
+                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'"/>
                 </label>
             </fieldset>
             <div>
