--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -6,21 +6,23 @@
     <title>Todo App: Projects</title>
     <link rel="stylesheet" href="https://igoradamenko.github.io/awsm.css/css/awsm_theme_black.css">
     <style>
-        .Bd{
+        .Bd {
             border: solid 1px gray;
         }
-        .Bdc\(red\){
+
+        .Bdc\(red\) {
             border-color: red !important;
         }
 
-        .C\(red\){
+        .C\(red\) {
             color: red;
         }
 
-        .P\(0\){
+        .P\(0\) {
             padding: 0;
         }
-        .P\(10\){
+
+        .P\(10\) {
             padding: 10px;
         }
     </style>
@@ -34,38 +36,38 @@
         <dt th:text="${project.description}">...</dt>
         <dd>
             <ul class="P(0)">
-                <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|">
-
-                </li>
+                <li th:each="step : ${project.steps}" th:text="|${step.description} (${step.daysToDeadline} dni)|"></li>
             </ul>
         </dd>
     </dl>
-    <!--/*@thymesVar id="project" type="io.github.mat3.applicationtodo.model.projection.ProjectWriteModel"*/-->
-    <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
-        <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
-        <fieldset>
-            <legend>Nowy projekt</legend>
+    <fieldset>
+        <!--/*@thymesVar id="project" type="io.github.mat3.applicationtodo.model.projection.ProjectWriteModel"*/-->
+        <legend>Nowy projekt</legend>
+        <form action="#" method="post" th:action="@{/projects}" th:object="${project}">
+            <p class="C(red)" th:if="${#fields.hasAnyErrors()}" th:errors="*{all}"></p>
             <label>Opis
                 <input type="text" th:field="*{description}" th:errorclass="'Bdc(red)'"/>
             </label>
             <fieldset th:each="step,stepStat : *{steps}">
                 <legend th:text="|Krok ${stepStat.index + 1}|"></legend>
                 <label>Opis
-                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}" th:errorclass="'Bdc(red)'"/>
+                    <input type="text" th:field="*{steps[__${stepStat.index}__].description}"
+                           th:errorclass="'Bdc(red)'"/>
                 </label>
                 <label>Dni do końca projektu
-                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}" th:errorclass="'Bdc(red)'"/>
+                    <input type="number" th:field="*{steps[__${stepStat.index}__].daysToDeadline}"
+                           th:errorclass="'Bdc(red)'"/>
                 </label>
             </fieldset>
             <div>
                 <button type="submit" name="addStep">+</button>
             </div>
-        </fieldset>
-        <p>
-            <button type="submit">Dodaj</button>
-            <button type="reset">Wyczyść</button>
-        </p>
-    </form>
+            <p>
+                <button type="submit">Dodaj</button>
+                <button type="reset">Wyczyść</button>
+            </p>
+        </form>
+    </fieldset>
 </main>
 
 </body>
